# Hermes-Fetch-AI

./: .env.example  .gitattributes  .gitignore  AFTER_REPO_SETUP_PROMPT.md  AUTONOMOUS_BUILD_AFTER_GO_PROMPT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HERMES_RESEARCH_PROMPT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: agentic-economy-thesis.md  agentverse-hosted-proof.md  agentverse-operator-handoff.md  architecture.md  demo.md  fetch-uagents-bridge.md  native-hermes-plugin.md  payment-rails.md  production.md  security.md  troubleshooting.md  upstream-hermes-pr.md
examples/: README.md  a2a-local.yaml  agentverse-mailbox-hermes.yaml  agentverse-mailbox.yaml  fake_mcp_server.py  hermes-local.yaml  hermes-stdio-env.yaml  hermes-stdio.yaml  local_client.py  payment-dry-run.yaml
research/: AGENTIC_ECONOMY_ADVERSARIAL_REVIEW.md  AGENTIC_ECONOMY_MASTER_REPORT.md  AGENTIC_ECONOMY_PRODUCT_STRATEGY.md  AGENTIC_ECONOMY_RESEARCH_COMPANY_PROMPT.md  AGENTIC_ECONOMY_RESEARCH_COMPANY_REPAIR_PROMPT.md  AGENTVERSE_TAKEOVER_READINESS_REVIEW.md  ARCHITECTURE_DECISION.md  AUTONOMOUS_BUILD_REPAIR_PROMPT.md  BUILD_BLOCKERS.md  BUILD_PROMPT.md  CLAUDE_CODE_TRIPLE_PROMPT.md  CONTAMINATION_AUDIT.md  E2E_DEMO_PLAN.md  EXTREME_HARDENING_AUDIT.md  EXTREME_HARDENING_PROMPT.md  FETCH_ACCOUNT_REQUIREMENTS.md  FETCH_FULL_CONNECTION_MAP.md  FETCH_GITHUB_SWEEP.md  FETCH_RAILS_DEEP_MAP.md  FETCH_UAGENTS_SURFACE.md  FET_TEST_FUNDS_PLAN.md  FIELD_TEST_EVIDENCE.md  FINAL_ARCHITECTURE_DECISION.md  FINAL_BOSS_HERMES_PROMPT.md  FINAL_BOSS_STATUS.md  FINAL_BUILD_PROMPT.md  FULL_CONNECTION_A2A_AGENTVERSE_ADDENDUM.md  FULL_CONNECTION_ALMANAC_ADDENDUM.md  FULL_CONNECTION_FETCH_WEBSITE_ADDENDUM.md  FULL_CONNECTION_GAP_AUDIT.md  FULL_HOOKUP_PROOF_PROMPT.md  FULL_HOOKUP_STATUS.md  GO_NO_GO.md  HARDENED_ARCHITECTURE_DECISION.md  HARDENED_BUILD_PROMPT.md  HARDENING_AUDIT.md  HERMES_AS_FETCH_AGENT_BLUEPRINT.md  HERMES_CODEX_DONE_AGREEMENT.md  HERMES_CODEX_DONE_AGREEMENT_PROMPT.md  HERMES_CODEX_DONE_STATUS.md  (+42 more)
research/agentic-economy-research-company/: compliance-matrix.md  prompt.md  source-ledger.md
research/pr-review-official-docs/: compliance-matrix.md  prompt.md
src/hermes_fetch_ai/: __init__.py  _redaction.py  a2a_server.py  arg_validator.py  audit.py  cli.py  config.py  direct_protocol.py  fake_mcp.py  hermes_plugin.py  hermes_probe.py  logging.py  policy.py  (+8 more)
tests/: conftest.py  test_a2a_server.py  test_arg_validator.py  test_config.py  test_contamination.py  test_direct_protocol_policy.py  test_field_hermes_stdio.py  test_hermes_plugin.py  test_hermes_probe.py  test_mailbox_startup.py  test_mcp_shim_fake_server.py  test_packaging.py  test_payment_demo.py  test_payment_policy.py  test_policy.py  test_redaction.py  test_result_normalizer.py  test_security_defaults.py  test_serve_http_roundtrip.py  test_uagent_direct_protocol.py
(+5 files in other folders)
