[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-fetch-ai"
version = "1.0.0"
description = "Thin policy-aware bridge between Hermes Agent tools and Fetch.ai uAgents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{name = "Porter Tanner"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Distributed Computing",
]

dependencies = [
  "uagents==0.24.2",
  "uagents-core==0.4.4",
  "uagents-adapter[mcp]==0.6.2",
  "mcp==1.27.1",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "python-dotenv>=1.0,<2",
  "jsonschema>=4.20,<5",
  "httpx>=0.25,<1",
]

[project.urls]
Homepage = "https://github.com/ptanner66-prog/Hermes-Fetch-AI"
Repository = "https://github.com/ptanner66-prog/Hermes-Fetch-AI"
Documentation = "https://github.com/ptanner66-prog/Hermes-Fetch-AI#readme"
Issues = "https://github.com/ptanner66-prog/Hermes-Fetch-AI/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
  "anyio>=4,<5",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
  "build>=1.2,<2",
  "twine>=6,<7",
  "pip-audit>=2.9,<3",
]

[project.scripts]
hermes-fetch-ai = "hermes_fetch_ai.cli:main"

[project.entry-points."hermes_agent.plugins"]
fetchai = "hermes_fetch_ai.hermes_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_fetch_ai = ["data/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
